@@ -1,6 +1,11 @@
 # ChangeLog for dev-ml/findlib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/ChangeLog,v 1.85 2012/05/24 10:48:04 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/findlib/ChangeLog,v 1.86 2012/06/10 20:17:01 aballier Exp $
+
+*findlib-1.3.2 (10 Jun 2012)
+
+  10 Jun 2012; Alexis Ballier <aballier@gentoo.org> +findlib-1.3.2.ebuild:
+  version bump
 
   24 May 2012; Alexis Ballier <aballier@gentoo.org> findlib-1.3.1.ebuild:
   keyword ~amd64-fbsd
